ecmascript/parser/tests/test262-error-references/fail/69990f0abf6d88e0.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/69990f0abf6d88e0.js:1:6
  |
1 | class;
  |      ^

